.provarCaches/00D410000011HE0EAM/objects/DOX__Template__c.object
<CustomObject>
    <description>Generate custom documents from Rootstock data and Customer templates</description>
    <fields>
        <fullName>DOX__AttachToSourcePrintMultReq__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only applicable for Operation: PrintMultiple. When checked, each single PDF document is attached to its sourcing record. If Folder setup is specified, bulk PDF will also be attached to such Folder.</description>
        <inlineHelpText>Only applicable for Operation: PrintMultiple. When checked, each single PDF document is attached to its sourcing record. If Folder setup is specified, bulk PDF will also be attached to such Folder.</inlineHelpText>
        <label>Attach to Source(Print Multi Operation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Attachment__c</fullName>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__AvailableForUse__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Unchecked, the Template will not be used for Printing.</description>
        <inlineHelpText>If Unchecked, the Template will not be used for Printing.</inlineHelpText>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Contact_Id__c</fullName>
        <inlineHelpText>Holds the salesforce record id of the contact used as the target object for Template Fields of the email template.</inlineHelpText>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Name_Format__c</fullName>
        <description>Prefix text to use when naming documents that result from a merge process</description>
        <label>Document Name Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Name_Prefix__c</fullName>
        <description>Prefix for the Document name after merge. The document name will be of format &lt;Document Name Prefix&gt;_&lt;Record Name&gt;_&lt;Timestamp&gt;</description>
        <inlineHelpText>Prefix for the Document name after merge. The document name will be of format &lt;Document Name Prefix&gt;_&lt;Record Name&gt;_&lt;Timestamp&gt;</inlineHelpText>
        <label>Document Name Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Split_Count__c</fullName>
        <label>Document Split Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AP 1099</fullName>
                </value>
                <value>
                    <fullName>AP Check</fullName>
                </value>
                <value>
                    <fullName>AR Memo</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>Customer ad Hoc Statements</fullName>
                </value>
                <value>
                    <fullName>Customer Statements</fullName>
                </value>
                <value>
                    <fullName>Packing Slip</fullName>
                </value>
                <value>
                    <fullName>Planned Transfer Picklist</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Remittance Advice</fullName>
                </value>
                <value>
                    <fullName>Returned Material Authorization</fullName>
                </value>
                <value>
                    <fullName>Sales Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice</fullName>
                </value>
                <value>
                    <fullName>Sales Order Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Sales Order Picklist</fullName>
                </value>
                <value>
                    <fullName>Sales Order Picklist by Order</fullName>
                </value>
                <value>
                    <fullName>Withholding Tax Certificate</fullName>
                </value>
                <value>
                    <fullName>Withholding Tax Return</fullName>
                </value>
                <value>
                    <fullName>Work Order Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOX__Email_Source__c</fullName>
        <inlineHelpText>Points to the field from where the email address is to be fetched.</inlineHelpText>
        <label>Email Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Email_Template_Id__c</fullName>
        <inlineHelpText>Holds the salesforce record id of the email template used for sending out documents.</inlineHelpText>
        <label>Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DOX__Filter__c</fullName>
        <description>if Source = Attachment is selected, use this to specify which attachment(s) you want. Use query language.</description>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__Folder_Id__c</fullName>
        <description>When a valid Folder Name is entered, this field is auto-Set to corresponding Id of user-defined Folder Name</description>
        <label>Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Folder_Name__c</fullName>
        <description>Set to &apos;Folder Unique Name&apos; of folder under which to save merged documents.</description>
        <label>Folder Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Org_Wide_Email_Address_Rec_ID__c</fullName>
        <inlineHelpText>Auto-set by the system upon Template record &apos;Save&apos;,  when a matching Org Wide Email Address record is found for specified &apos;Sender Email (Org Wide Email Addr)&apos; value.</inlineHelpText>
        <label>Org Wide Email Address Rec ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Print_Copies__c</fullName>
        <description>Field on target object specifying the number of copies for the print.</description>
        <inlineHelpText>Field on target object specifying the number of copies for the print</inlineHelpText>
        <label>Print Copies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Printed_Flag__c</fullName>
        <description>Mark the document as printed on the specified API Field for the target object</description>
        <inlineHelpText>Mark the document as printed on the specified API Field for the target object</inlineHelpText>
        <label>Printed Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__RecordIdSourceForFileLinkage__c</fullName>
        <inlineHelpText>API Name of field within Template&apos;s &apos;Target Object&apos; from where system fetches list of record Id(s) to which RootForms merge-generated Files are to be linked to. Only applicable when &apos;Attach Printed Doc as File&apos; = True.</inlineHelpText>
        <label>Record Id(s) source for File linkage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Reference_Field__c</fullName>
        <label>Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Sender_Email__c</fullName>
        <description>Verified Email ID of Sender as per Organization-Wide Email Addresses</description>
        <inlineHelpText>Verified Email ID of Sender as per Organization-Wide Email Addresses</inlineHelpText>
        <label>Sender Email (Org Wide Email Addr)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DOX__Sender_Name__c</fullName>
        <description>No More use</description>
        <inlineHelpText>No More use</inlineHelpText>
        <label>ZZZZZ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Source__c</fullName>
        <description>This is the source of where the document will come from. Values are Attachment &amp; Document</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOX__Split_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Split_Tables_At_Row__c</fullName>
        <description>Splits the table at the row specified. New rows will start from the next page. Caution: This will apply the split on all tables in the document</description>
        <inlineHelpText>Splits the table at the row specified. New rows will start from the next page. Caution: This will apply the split on all tables in the document</inlineHelpText>
        <label>Split Tables At Row</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOX__Stitch_On_Multiple_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stitch On Multiple Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Target_Object_Label__c</fullName>
        <label>Target Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__printPageNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Print Sequential Page Numbers on Printed PDF pages.</description>
        <inlineHelpText>Print Sequential Page Numbers on Printed PDF pages.</inlineHelpText>
        <label>Print Page Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__rootFormDocFormat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Printed Doc as File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__useLocale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Organization default locale and Time zone values will be used for printing Date/DateTime/Number fields value.</description>
        <inlineHelpText>If checked, the Organization default locale and Time zone values will be used for printing Date/DateTime/Number fields value.</inlineHelpText>
        <label>Use Organization Locale for Printing</label>
        <type>Checkbox</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>Credit_Memo</fullName>
        <columns>NAME</columns>
        <columns>DOX__Document_Type__c</columns>
        <columns>DOX__Target_Object__c</columns>
        <columns>DOX__Target_Object_Label__c</columns>
        <columns>DOX__Contact_Id__c</columns>
        <columns>DOX__Email_Source__c</columns>
        <columns>DOX__Email_Template_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DOX__Split_Documents__c</columns>
        <columns>DOX__Stitch_On_Multiple_Merge__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOX__Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Credit Memo</value>
        </filters>
        <label>Credit Memo</label>
    </listViews>
    <listViews>
        <fullName>DOX__All</fullName>
        <columns>NAME</columns>
        <columns>DOX__Document_Type__c</columns>
        <columns>DOX__Target_Object__c</columns>
        <columns>DOX__Email_Source__c</columns>
        <columns>DOX__Print_Copies__c</columns>
        <columns>DOX__Printed_Flag__c</columns>
        <columns>DOX__Split_Documents__c</columns>
        <columns>DOX__Split_Tables_At_Row__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pick_Lists</fullName>
        <columns>NAME</columns>
        <columns>DOX__Document_Type__c</columns>
        <columns>DOX__Document_Name__c</columns>
        <columns>DOX__Document_Name_Format__c</columns>
        <columns>DOX__Document_Name_Prefix__c</columns>
        <columns>DOX__Folder_Name__c</columns>
        <columns>DOX__Attachment__c</columns>
        <columns>DOX__Reference_Field__c</columns>
        <columns>DOX__Printed_Flag__c</columns>
        <columns>DOX__Target_Object__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOX__Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Order Picklist</value>
        </filters>
        <label>Pick Lists</label>
    </listViews>
    <listViews>
        <fullName>RFDEMO1</fullName>
        <columns>NAME</columns>
        <columns>DOX__rootFormDocFormat__c</columns>
        <columns>DOX__Document_Type__c</columns>
        <columns>DOX__Target_Object__c</columns>
        <columns>DOX__Target_Object_Label__c</columns>
        <columns>DOX__Contact_Id__c</columns>
        <columns>DOX__Email_Source__c</columns>
        <columns>DOX__Email_Template_Id__c</columns>
        <columns>DOX__Split_Documents__c</columns>
        <columns>DOX__Stitch_On_Multiple_Merge__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DOX__Folder_Id__c</columns>
        <columns>DOX__Folder_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>RFDEMO</value>
        </filters>
        <label>RFDEMO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Invoice</fullName>
        <columns>NAME</columns>
        <columns>DOX__Document_Type__c</columns>
        <columns>DOX__Target_Object__c</columns>
        <columns>DOX__Target_Object_Label__c</columns>
        <columns>DOX__Contact_Id__c</columns>
        <columns>DOX__Email_Source__c</columns>
        <columns>DOX__Email_Template_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DOX__Split_Documents__c</columns>
        <columns>DOX__Stitch_On_Multiple_Merge__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOX__Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Invoice</value>
        </filters>
        <label>Sales Invoice</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DOX__Email_Configuration</fullName>
        <active>true</active>
        <description>Contact Id, Email Source and Email Template information is Required for sending Email.</description>
        <errorConditionFormula>(!ISBLANK(DOX__Contact_Id__c) || !ISBLANK(DOX__Email_Source__c) || !ISBLANK(DOX__Email_Template_Id__c)) &amp;&amp; ( ISBLANK(DOX__Contact_Id__c) || ISBLANK(DOX__Email_Source__c) || ISBLANK(DOX__Email_Template_Id__c))</errorConditionFormula>
        <errorMessage>Contact Id, Email Source and Email Template information is Required for sending Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOX__Record_Id_source_for_File_linkage</fullName>
        <active>true</active>
        <description>Attach Printed Doc as File field should be checked.</description>
        <errorConditionFormula>NOT(ISBLANK(DOX__RecordIdSourceForFileLinkage__c) )  &amp;&amp; !DOX__rootFormDocFormat__c</errorConditionFormula>
        <errorMessage>Attach Printed Doc as File field should be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOX__Sender_Email_Configuration</fullName>
        <active>false</active>
        <description>Sender Name and Sender Email ID are required together.</description>
        <errorConditionFormula>( !ISBLANK( DOX__Sender_Name__c ) &amp;&amp;  ISBLANK( DOX__Sender_Email__c ) ) || ( ISBLANK( DOX__Sender_Name__c ) &amp;&amp;  !ISBLANK( DOX__Sender_Email__c ) )</errorConditionFormula>
        <errorMessage>Sender Name and Sender Email ID are required together.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOX__SplitCount</fullName>
        <active>true</active>
        <description>Stitch On Multiple Merge should be set as Document Split request is for more than one record.</description>
        <errorConditionFormula>DOX__Document_Split_Count__c &gt; 1 &amp;&amp; !DOX__Stitch_On_Multiple_Merge__c</errorConditionFormula>
        <errorMessage>Stitch On Multiple Merge should be set as Document Split request is for more than one record.</errorMessage>
    </validationRules>
</CustomObject>